# updating_sites

./: .env.exampl  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
app/: Dockerfile  README.md  pyproject.toml
app/src/: get_auth_dropbox.py  main.py
app/src/api/v1/: api_test.py  dropbox.py  storage.py  update_portal.py  upload_file.py
app/src/api/v1/api_models/: api_model_test.py  mixins.py
app/src/core/: logger.py  settings.py
app/src/models/: mixins.py  model_test.py
app/src/schemas/v1/: entity.py
app/src/services/: dropbox_.py  helper.py  portals.py  storage.py  test.py
