[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vladimir Nagibin <vlnagibin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
pydantic-settings = "2.6.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 87